--- a/PeA/.env
+++ b/PeA/.env
@@ -3,6 +3,9 @@ MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
 
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000
+
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:JD7YItAAdz0RzEoiD+MbIFzn1d8ZU4j3T5qteyMufaE=
