--- a/PeA/.env
+++ b/PeA/.env
@@ -1,4 +1,4 @@
-MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb+srv://fc56931:K1k2m3m4@cluster0.pg1s2u8.mongodb.net/'
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
