--- a/PeA/.env.example
+++ b/PeA/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI= 'mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb+srv://fc55372:Benfica110@cluster0.pg1s2u8.mongodb.net/'
 
 
 APP_NAME=Laravel
