--- a/PeA/.env
+++ b/PeA/.env
@@ -1,5 +1,5 @@
-#MONGODB_URI='mongodb+srv://fc56931:K1k2m3m4@cluster0.pg1s2u8.mongodb.net/'
-MONGODB_URI='mongodb://127.0.0.1:27017'
+MONGODB_URI='mongodb+srv://fc56948:cdwtoor@cluster0.pg1s2u8.mongodb.net/'
+
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
 
@@ -15,10 +15,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+
 DB_CONNECTION=mongodb
-DB_HOST=127.0.0.1
-DB_PORT=27017
-DB_DATABASE='Lost_and_Found_Management_System'
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
