forgot to switch it to localhost

--- a/PeA/.env
+++ b/PeA/.env
@@ -1,5 +1,5 @@
-MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
-#MONGODB_URI='mongodb://127.0.0.1:27017'
+#MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb://127.0.0.1:27017'
 
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
