--- a/PeA/.env
+++ b/PeA/.env
@@ -1,5 +1,5 @@
-MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
-#MONGODB_URI='mongodb://127.0.0.1:27017'
+#MONGODB_URI='mongodb+srv://fc55945:fc55945@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb://127.0.0.1:27017'
 
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
@@ -39,13 +39,22 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=projetopea1@gmail.com
+MAIL_PASSWORD='qsym ogwm rmjt hgup'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="projetopea1@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=990c8896d3684d
+# MAIL_PASSWORD=ec909d3a5ab730
+
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
