--- a/PeA/.env
+++ b/PeA/.env
@@ -1,4 +1,5 @@
-MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
+#MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb://localhost:27017'
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
