--- a/PeA/package.json
+++ b/PeA/package.json
@@ -9,7 +9,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^1.6.4",
+        "axios": "^1.7.2",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
@@ -20,6 +20,7 @@
         "auth": "^1.0.2",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
-        "guard": "^0.1.2"
+        "guard": "^0.1.2",
+        "sanctum": "^1.9.0"
     }
 }
