--- a/PeA/.env
+++ b/PeA/.env
@@ -10,7 +10,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:JD7YItAAdz0RzEoiD+MbIFzn1d8ZU4j3T5qteyMufaE=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://projetopea.eu/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
