--- a/PeA/.env
+++ b/PeA/.env
@@ -3,14 +3,15 @@ MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
 
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000
+SANCTUM_STATEFUL_DOMAINS=104.197.93.201:443,34.30.164.40:443
+ALLOWED_HOSTS="104.197.93.201:443,34.30.164.40:443"
 
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:JD7YItAAdz0RzEoiD+MbIFzn1d8ZU4j3T5qteyMufaE=
+APP_KEY=base64:vmWTFN5d+4OopntcMoEJZDaldnHdEQAGyGkRXRFjxAs=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://projetopea.eu
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
