toastr instalado por npm

--- a/PeA/package.json
+++ b/PeA/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "toastr": "^2.1.4"
     }
 }
