--- a/PeA/composer.json
+++ b/PeA/composer.json
@@ -12,8 +12,10 @@
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/omnipay": "^3.2",
         "mongodb/laravel-mongodb": "^4.0",
-        "mongodb/mongodb": "1.15"
+        "mongodb/mongodb": "1.15",
+        "omnipay/paypal": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
