--- a/PeA/package.json
+++ b/PeA/package.json
@@ -21,6 +21,7 @@
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
         "guard": "^0.1.2",
-        "sanctum": "^1.9.0"
+        "sanctum": "^1.9.0",
+        "vue": "^3.4.30"
     }
 }
