--- a/PeA/.env
+++ b/PeA/.env
@@ -1,15 +1,15 @@
 
-#MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
+#MONGODB_URI='your_mongodb_uri'
 MONGODB_URI='mongodb://localhost:27017'
 
 
-SANCTUM_STATEFUL_DOMAINS=104.197.93.201:443,34.30.164.40:443
-ALLOWED_HOSTS="104.197.93.201:443,34.30.164.40:443"
+SANCTUM_STATEFUL_DOMAINS=""
+ALLOWED_HOSTS=""
 
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:vmWTFN5d+4OopntcMoEJZDaldnHdEQAGyGkRXRFjxAs=
+APP_KEY="your_app_key"
 APP_DEBUG=true
 APP_URL=https://projetopea.eu
 
@@ -41,7 +41,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=projetopea1@gmail.com
-MAIL_PASSWORD="qsym ogwm rmjt hgup"
+MAIL_PASSWORD="your mail app password"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="projetopea1@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
@@ -67,6 +67,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYPAL_CLIENT_ID=AUZGygWXLgEpL9jQ1oEmQ12ZM5D0q9I4HqGqIDZ_Fhty_HoFuqahQyO1aXLtMk2NW2zJt96TZhQcaZdM
-PAYPAL_CLIENT_SECRET=EBcD7Sntu3nfLG5vjnbSuYbyfgqy7_sWIVr6DXbgqgz6Ga-W9H003-vW1Gwpa-dIZ5dM2LEH5vogthPe
+PAYPAL_CLIENT_ID="Your paypal client ID"
+PAYPAL_CLIENT_SECRET="Your paypal client secret"
 PAYPAL_CURRENCY=USD
