--- a/PeA/.env
+++ b/PeA/.env
@@ -1,27 +1,28 @@
-MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
 
-PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
-PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET='iLNZf1UHjdcp8JcbrKcricT9lia4TkXA3fQ6z7eN'
+#MONGODB_URI='your_mongodb_uri'
+MONGODB_URI='mongodb://localhost:27017'
 
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,localhost:3000
+
+SANCTUM_STATEFUL_DOMAINS=""
+ALLOWED_HOSTS=""
 
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:JD7YItAAdz0RzEoiD+MbIFzn1d8ZU4j3T5qteyMufaE=
+APP_KEY="your_app_key"
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://projetopea.eu
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mongodb
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=localhost 
+DB_PORT=27017   
+DB_DATABASE=Lost_and_Found_Management_System
+#DB_USERNAME=
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -40,7 +41,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=projetopea1@gmail.com
-MAIL_PASSWORD="qsym ogwm rmjt hgup"
+MAIL_PASSWORD="your mail app password"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="projetopea1@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
@@ -66,6 +67,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYPAL_CLIENT_ID=AUZGygWXLgEpL9jQ1oEmQ12ZM5D0q9I4HqGqIDZ_Fhty_HoFuqahQyO1aXLtMk2NW2zJt96TZhQcaZdM
-PAYPAL_CLIENT_SECRET=EBcD7Sntu3nfLG5vjnbSuYbyfgqy7_sWIVr6DXbgqgz6Ga-W9H003-vW1Gwpa-dIZ5dM2LEH5vogthPe
+PAYPAL_CLIENT_ID="Your paypal client ID"
+PAYPAL_CLIENT_SECRET="Your paypal client secret"
 PAYPAL_CURRENCY=USD
