--- a/PeA/.env
+++ b/PeA/.env
@@ -3,15 +3,16 @@ MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
 #MONGODB_URI='mongodb://localhost:27017'
 
 
-SANCTUM_STATEFUL_DOMAINS=104.197.93.201:443,34.30.164.40:443
-ALLOWED_HOSTS="104.197.93.201:443,34.30.164.40:443"
+#SANCTUM_STATEFUL_DOMAINS=104.197.93.201:443,34.30.164.40:443,195.23.64.139
+#ALLOWED_HOSTS="104.197.93.201:443,34.30.164.40:443,195.23.64.139"
 
 
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vmWTFN5d+4OopntcMoEJZDaldnHdEQAGyGkRXRFjxAs=
 APP_DEBUG=true
-APP_URL=https://projetopea.eu
+#APP_URL=https://projetopea.eu
+APP_URL=https://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
