--- a/PeA/.env
+++ b/PeA/.env
@@ -1,6 +1,6 @@
 
-MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
-#MONGODB_URI='mongodb://localhost:27017'
+#MONGODB_URI='mongodb+srv://fc55854:fc55854@cluster0.pg1s2u8.mongodb.net/'
+MONGODB_URI='mongodb://localhost:27017'
 
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID='AfPbU9Xkp6x4m8jmRDrZ7ezylc8yuljk6QGjwJLo'
